--- a/index.css
+++ b/index.css
@@ -2,4 +2,4 @@
 h1 {text-align:center; color:#0D56A6; border-style:solid; border-width:5px; background: orange; padding:1em;}
 article {padding: 1em; float:left; width: 60%; border-style: solid; }
 aside {text-align:left; float: right; width: 30%; padding: 1em; border-style: solid; }
-footer {clear: both;}
+footer {clear: both; text-align: center;}
