--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 .wrapper {text-align:left; padding:1em; margin: 0 auto;}
-h1 {text-align:center; color:#0D56A6; border-style:solid; border-width:5px; background: orange; padding:1em;}
-article {padding: 1em; float:left; width: 60%; border-style: solid; }
-aside {text-align:left; float: right; width: 30%; padding: 1em; border-style: solid; }
+h1 {text-align:center; color:#0772A1; border-style:solid; border-width:5px; background: pink; border-color:#0772A1; padding:1em;}
+article {padding: 1em; float:left; width: 60%; border-style: solid; background: pink; height: auto;}
+aside {text-align:left; float: right; width: 30%; padding: 1em; border-style: solid; background: pink; height: auto; }
 footer {clear: both; text-align: center;}
