--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
-.wrapper {text-align:left; padding:1em; font-family: franklin gothic book, arial;}
+.wrapper {text-align:left; padding:1em; font-family: franklin gothic book, arial; height: 1000px; margin: 10px;}
 h1 {text-align:center; border-style:solid; border-width:5px; background: pink; padding:1em; font-family: franklin gothic book, arial;}
-article {padding: 1em; float:left; width: 60%; border-style: solid; background: pink;}
-aside {text-align:left; float: right; width: 30%; padding: 1em; border-style: solid; background: pink; }
-footer {clear: both; text-align: center;}
+article {padding: 1em; float:left; width: 60%; border-style: solid; background: pink; min-height: 100%; height:100%;}
+aside {text-align:left; float: right; width: 30%; padding: 1em; border-style: solid; background: pink; min-height: 100%; height:100%; }
+footer {clear: both; text-align: center; margin: 50px;}
