--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
-.wrapper {text-align:left; padding:1em; font-family: franklin gothic book, arial; height: 1000px; margin: 10px;}
-h1 {text-align:center; border-style:solid; border-width:5px; background: pink; padding:1em; font-family: franklin gothic book, arial;}
-article {padding: 1em; float:left; width: 60%; border-style: solid; background: pink; min-height: 100%; height:100%;}
-aside {text-align:left; float: right; width: 30%; padding: 1em; border-style: solid; background: pink; min-height: 100%; height:100%; }
-footer {clear: both; text-align: center; margin: 50px;}
+#header {height:200px; color: #1240AB; font-family: Century Gothic Book, Helvetica, sans-serif; font-size: 15pt}
+#headerimg {float:left; margin-right: 20px}
+.everything{background:pink; width:75%; margin:0 auto; padding: 20px;}
+article {width: 55%; margin-left: 20px; padding: 20px 0px 20px; float: left;}
+aside {width: 35%; margin-right: 20px; padding: 20px 0px 20px; float: right;}
+#footer {clear: both; text-align: center; background: white; margin-top: 20px;}
