fonts and things

--- a/index.css
+++ b/index.css
@@ -1,6 +1,15 @@
-#header {height:200px; color: #white; font-family: Century Gothic Book, Helvetica, sans-serif; font-size: 20px;}
+@font-face {
+     font-family: Eurostile Bold;
+     src: url('Eurostile Bold.ttf'); 
+}
+@font-face {
+     font-family: Eurostile;
+     src: url('Eurostile.ttf'); 
+}
+
+#header {font-family: eurostile bold, arial, sans serif; height:200px; color: #white; font-size: 20px;}
 #headerimg {float:left; margin-right: 20px}
-.everything{color: white; font-faily: arial, sans-serif; font-size: 15pt; border:solid; border-color:black; background:#1954E9; width:75%; margin:0 auto; padding: 20px;}
-article {width: 55%; margin-left: 20px; padding: 20px 0px 20px; float: left;}
-aside {width: 35%; margin-right: 20px; padding: 20px 0px 20px; float: right;}
+.everything{color: black; font-size: 15pt; border:solid; border-color:black; background:pink; width:75%; margin:0 auto; padding: 20px;}
+article {font-family: eurostile, arial, sans serif;width: 55%; margin-left: 20px; padding: 20px 0px 20px; float: left;}
+aside {font-family: eurostile, arial, sans serif; width: 35%; margin-right: 20px; padding: 20px 0px 20px; float: right;}
 footer {clear: both; text-align: center; margin-top: 20px;}
