--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
 @font-face {
-     font-family: Eurostile Bold;
-     src: url('Eurostile Bold.ttf'); 
+     font-family: eurostile bold;
+     src: url('fonts/eurostile bold.ttf'); 
 }
 @font-face {
-     font-family: Eurostile;
-     src: url('Eurostile.ttf'); 
+     font-family: eurostile;
+     src: url('fonts/eurostile.ttf'); 
 }
 
 #header {font-family: eurostile bold, arial, sans serif; height:200px; color: #white; font-size: 20px;}
