--- a/index.css
+++ b/index.css
@@ -7,9 +7,10 @@
      src: url('fonts/eurostile.ttf'); 
 }
 
-#header {font-family: eurostile bold, arial, sans serif; height:200px; color: #white; font-size: 20px;}
+#header {font-family: "eurostile bold", arial, sans-serif; height:200px; color: #white; font-size: 20px;}
 #headerimg {float:left; margin-right: 20px}
 .everything{color: black; font-size: 15pt; border:solid; border-color:black; background:pink; width:75%; margin:0 auto; padding: 20px;}
 article {font-family: eurostile, arial, sans serif;width: 55%; margin-left: 20px; padding: 20px 0px 20px; float: left;}
-aside {font-family: eurostile, arial, sans serif; width: 35%; margin-right: 20px; padding: 20px 0px 20px; float: right;}
+aside {font-family: eurostile, arial, sans-serif; width: 35%; margin-right: 20px; padding: 20px 0px 20px; float: right;}
 footer {clear: both; text-align: center; margin-top: 20px;}
+h1 {text-align:center;}
