--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 @font-face {
      font-family: eurostile bold;
-     src: url('fonts/eurostile bold.ttf'); 
+     src: url('fonts/eurostile-bold.ttf'); 
 }
 @font-face {
      font-family: eurostile;
