--- a/index.css
+++ b/index.css
@@ -8,16 +8,33 @@
 }
 
 .header {
-   height: 120px; background: #6A92D4; margin:-10px; z-index:0;
+   height: 120px; background: #6A92D4; margin:-10px -10px -30px;
 }
 #headercontent {
-  width: 75%; margin: 0 auto;padding: 20px; 
+  width: 75%; margin: 0 auto;padding-top:10px; 
+}
+.navbar{
+    list-style:none;
+  margin: 0 auto;
+  width:75%;
+    padding:0;
+    text-align:center; 
+  background:#ebebeb;
+  box-shadow: 0 3px 5px 2px #888;
+  font-family: eurostile, arial, sans-serif;
+}
+.navbar li{
+    display:inline;
+}
+.navbar a{
+    display:inline-block;
+    padding:10px;
 }
 body{
   background:#DAD2D0;
 }
 .container {
-  background: pink; width:75%; margin: 0 auto; overflow: hidden; box-shadow: 0 0 5px 5px #888; font-family: eurostile, arial, sans-serif; font-size: 15pt; z-index:1;
+  background: pink; width:75%; margin: -15px auto 0 auto; overflow: hidden; box-shadow: 0 3px 5px 2px #888; font-family: eurostile, arial, sans-serif; font-size:15pt;
 }
 #article {
   width: 55%; padding: 15px; float:left;
