--- a/contact.css
+++ b/contact.css
@@ -37,6 +37,9 @@ body{
   background: pink; width:75%; margin: -15px auto 0 auto; overflow: hidden; box-shadow: 0 3px 5px 2px #888; font-family: eurostile, arial, sans-serif; font-size:15pt;
 }
 
+h1  {padding-left:30px;
+}
+
 #contact-area {
 	width: 600px;
 	margin-top: 25px;
