--- a/index.css
+++ b/index.css
@@ -43,4 +43,61 @@ body{
 }
 #aside{float:right; width: 35%; padding: 15px;
 }
+
+#contact  {padding-left:30px;
+}
+
+#thanks {
+padding-left:30;
+}
+
+#contact-area {
+	width: 600px;
+	margin-top: 25px;
+  padding:30px;
+}
+
+#contact-area input, #contact-area textarea {
+	padding: 5px;
+	width: 471px;
+	font-size: 1.4em;
+	margin: 0px 0px 10px 0px;
+	border: 2px solid #ccc;
+}
+
+#contact-area textarea {
+	height: 90px;
+}
+
+#contact-area textarea:focus, #contact-area input:focus {
+	border: 2px solid #900;
+}
+
+#contact-area input.submit-button {
+	width: 100px;
+	float: right;
+}
+
+label {
+	float: left;
+	text-align: right;
+	margin-right: 15px;
+	width: 100px;
+	padding-top: 5px;
+	font-size: 1.4em;
+}
+
+#text{
+text-align:center;
+}
+
+resume{
+  margin: 20px;
+}
+
+.list1{display:inline-block; margin-top: -20px;}
+.list2{display:inline-block; margin-top: -20px;}
+.list3{display:inline-block; margin-top: -20px;}
+.list4{display:inline-block; margin-top: -20px;}
+
 .footer{text-align:center; margin: 20px;}
