--- a/resume.css
+++ b/resume.css
@@ -46,4 +46,59 @@ body{
 .list3{display:inline-block; margin-top: -20px;}
 .list4{display:inline-block; margin-top: -20px;}
 
+#article {
+  width: 55%; padding: 15px; float:left;
+}
+#piderman {float:left; margin-right:30px; margin-bottom:20px;
+}
+#aside{float:right; width: 35%; padding: 15px;
+}
+
+h1{
+text-align:center;
+}
+
+#contact  { padding-top:10px;
+}
+
+#thanks {
+padding-left:30;
+}
+
+#contact-area {
+	width: 600px;
+	margin-top: 25px;
+  padding:30px;
+}
+
+#contact-area input, #contact-area textarea {
+	padding: 5px;
+	width: 471px;
+	font-size: 1.4em;
+	margin: 0px 0px 10px 0px;
+	border: 2px solid #ccc;
+}
+
+#contact-area textarea {
+	height: 90px;
+}
+
+#contact-area textarea:focus, #contact-area input:focus {
+	border: 2px solid #900;
+}
+
+#contact-area input.submit-button {
+	width: 100px;
+	float: right;
+}
+
+label {
+	float: left;
+	text-align: right;
+	margin-right: 15px;
+	width: 100px;
+	padding-top: 5px;
+	font-size: 1.4em;
+}
+
 .footer{text-align:center; margin: 20px;}
