--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body{
 #aside{float:right; width: 35%; padding: 15px;
 }
 
-#contact  {padding-left:30px;
+#contacttitle  {margin-left:30px;
 }
 
 #thanks {
@@ -54,7 +54,7 @@ padding-left:30;
 #contact-area {
 	width: 600px;
 	margin-top: 25px;
-  padding:30px;
+  padding-left:30px;
 }
 
 #contact-area input, #contact-area textarea {
