--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,7 @@
      src: url('fonts/eurostile.ttf'); 
 }
 
-@font-face {
-     font-family: cabin;
-     src: url('fonts/Cabin-Regular.ttf'); 
-}
+@import url(http://fonts.googleapis.com/css?family=Lato);
 
 .header {
    height: 120px; background: #6A92D4; margin:-10px -8px -30px;
@@ -26,7 +23,7 @@
     text-align:center; 
   background:#ebebeb;
   box-shadow: 0 3px 5px 2px #888;
-  font-family: cabin, arial, sans-serif;
+  font-family: 'Lato', arial, sans-serif;
 }
 .navbar li{
     display:inline;
@@ -39,7 +36,7 @@ body{
   background:#DAD2D0;
 }
 .container {
-  background: pink; width:75%; margin: -15px auto 0 auto; overflow: hidden; box-shadow: 0 3px 5px 2px #888; font-family: cabin, arial, sans-serif; font-size:15pt;
+  background: pink; width:75%; margin: -15px auto 0 auto; overflow: hidden; box-shadow: 0 3px 5px 2px #888; font-family: 'Lato', arial, sans-serif; font-size:15pt;
 }
 #article {
   width: 55%; padding: 15px; float:left;
