--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
     text-align:center; 
   background:#ebebeb;
   box-shadow: 0 3px 5px 2px #888;
-  font-family: 'Lato', arial, sans-serif;
+  font-family: verdana, arial, sans-serif;
 }
 .navbar li{
     display:inline;
@@ -36,7 +36,7 @@ body{
   background:#DAD2D0;
 }
 .container {
-  background: pink; width:75%; margin: -15px auto 0 auto; overflow: hidden; box-shadow: 0 3px 5px 2px #888; font-family: 'Lato', arial, sans-serif; font-size:15pt;
+  background: pink; width:75%; margin: -15px auto 0 auto; overflow: hidden; box-shadow: 0 3px 5px 2px #888; font-family: verdana, arial, sans-serif; font-size:15pt;
 }
 #article {
   width: 55%; padding: 15px; float:left;
