--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
     text-align:center; 
   background:#ebebeb;
   box-shadow: 0 3px 5px 2px #888;
-  font-family: eurostile, arial, sans-serif;
+  font-family: arial, sans-serif;
 }
 .navbar li{
     display:inline;
@@ -36,7 +36,7 @@ body{
   background:#DAD2D0;
 }
 .container {
-  background: pink; width:75%; margin: -15px auto 0 auto; overflow: hidden; box-shadow: 0 3px 5px 2px #888; font-family: eurostile, arial, sans-serif; font-size:15pt;
+  background: pink; width:75%; margin: -15px auto 0 auto; overflow: hidden; box-shadow: 0 3px 5px 2px #888; font-family: arial, sans-serif; font-size:15pt;
 }
 #article {
   width: 55%; padding: 15px; float:left;
@@ -57,28 +57,6 @@ padding-left:30;
 	width: 600px;
 	margin-top: 25px;
   padding-left:30px;
-}
-
-#contact-area input, #contact-area textarea {
-	padding: 5px;
-	width: 471px;
-	font-size: 1.4em;
-	margin: 0px 0px 10px 0px;
-	border: 2px solid #ccc;
-}
-
-#contact-area textarea {
-	height: 90px;
-}
-
-#contact-area textarea:focus, #contact-area input:focus {
-	border: 2px solid #900;
-}
-
-#contact-area input.submit-button {
-	width: 100px;
-	float: right;
-}
 
 label {
 	float: left;
