--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,10 @@
      text-decoration: inherit;
      /* no underline */
  }
+
+ body{
+     width:100%;
+ }
  
  h1 {
      font-family: 'Raleway', sans-serif;
@@ -79,7 +83,7 @@
 
  @media (max-width: 800px){
     .container{
-         width:100%;
-         margin:0;
+         width:97%;
+         margin:0 auto;
      }
  }
