--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,16 +1,10 @@
- a {
-     color: inherit;
-     /* blue colors for links too */
-     text-decoration: inherit;
-     /* no underline */
- }
-
  body{
      width:100%;
  }
  
  h1 {
      font-family: 'Raleway', sans-serif;
+     line-height: 1.5em;
  }
  
  html {
